--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #47b2e4;
+  color: #629ef7;
   text-decoration: none;
 }
 
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #37517e;
+  background: #243e6d;
 }
 
 #preloader:before {
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #37517e;
+  border: 6px solid #243e6d;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #47b2e4;
+  background: #629ef7;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -112,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 15px 0;
 }
 #header.header-scrolled, #header.header-inner-pages {
-  background: rgba(40, 58, 90, 0.9);
+  background: rgba(29, 50, 87, 0.9);
 }
 #header .logo {
   font-size: 30px;
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #47b2e4;
+  color: #629ef7;
 }
 .navbar .getstarted, .navbar .getstarted:focus {
   padding: 8px 20px;
@@ -174,12 +174,12 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   color: #fff;
   font-size: 14px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #629ef7;
   font-weight: 600;
 }
 .navbar .getstarted:hover, .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #31a9e1;
+  background: #3b87f7;
 }
 .navbar .dropdown ul {
   display: block;
@@ -210,7 +210,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #47b2e4;
+  color: #629ef7;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -268,7 +268,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(40, 58, 90, 0.9);
+  background: rgba(29, 50, 87, 0.9);
   transition: 0.3s;
   z-index: 999;
 }
@@ -293,14 +293,14 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-mobile a, .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #37517e;
+  color: #243e6d;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #47b2e4;
+  color: #629ef7;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
-  color: #37517e;
+  color: #243e6d;
 }
 .navbar-mobile .dropdown ul {
   position: static;
@@ -323,7 +323,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #47b2e4;
+  color: #629ef7;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -335,7 +335,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #37517e;
+  background: #243e6d;
 }
 #hero .container {
   padding-top: 72px;
@@ -363,10 +363,10 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
   margin: 10px 0 0 0;
   color: #fff;
-  background: #47b2e4;
+  background: #629ef7;
 }
 #hero .btn-get-started:hover {
-  background: #209dd8;
+  background: #3b87f7;
 }
 #hero .btn-watch-video {
   font-size: 16px;
@@ -385,7 +385,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-right: 8px;
 }
 #hero .btn-watch-video:hover i {
-  color: #47b2e4;
+  color: #629ef7;
 }
 #hero .animated {
   animation: up-down 2s ease-in-out infinite alternate-reverse both;
@@ -470,7 +470,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #37517e;
+  color: #243e6d;
 }
 .section-title h2::before {
   content: "";
@@ -488,7 +488,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #47b2e4;
+  background: #629ef7;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -543,7 +543,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #47b2e4;
+  color: #629ef7;
   line-height: 1;
 }
 .about .content p:last-child {
@@ -559,14 +559,14 @@ section {
   border-radius: 4px;
   transition: 0.3s;
   line-height: 1;
-  color: #47b2e4;
+  color: #629ef7;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #629ef7;
 }
 .about .content .btn-learn-more:hover {
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
   text-decoration: none;
 }
@@ -580,7 +580,7 @@ section {
 .why-us .content h3 {
   font-weight: 400;
   font-size: 34px;
-  color: #37517e;
+  color: #243e6d;
 }
 .why-us .content h4 {
   font-size: 20px;
@@ -623,7 +623,7 @@ section {
   cursor: pointer;
 }
 .why-us .accordion-list span {
-  color: #47b2e4;
+  color: #629ef7;
   font-weight: 600;
   font-size: 18px;
   padding-right: 10px;
@@ -645,7 +645,7 @@ section {
   color: #343a40;
 }
 .why-us .accordion-list a.collapsed:hover {
-  color: #47b2e4;
+  color: #629ef7;
 }
 .why-us .accordion-list a.collapsed .icon-show {
   display: inline-block;
@@ -682,7 +682,7 @@ section {
 .skills .content h3 {
   font-weight: 700;
   font-size: 32px;
-  color: #37517e;
+  color: #243e6d;
   font-family: "Poppins", sans-serif;
 }
 .skills .content ul {
@@ -695,7 +695,7 @@ section {
 .skills .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #47b2e4;
+  color: #629ef7;
 }
 .skills .content p:last-child {
   margin-bottom: 0;
@@ -713,7 +713,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #37517e;
+  color: #243e6d;
 }
 .skills .progress .skill .val {
   float: right;
@@ -743,7 +743,7 @@ section {
   margin-bottom: 10px;
 }
 .services .icon-box .icon i {
-  color: #47b2e4;
+  color: #629ef7;
   font-size: 36px;
   transition: 0.3s;
 }
@@ -753,7 +753,7 @@ section {
   font-size: 24px;
 }
 .services .icon-box h4 a {
-  color: #37517e;
+  color: #243e6d;
   transition: ease-in-out 0.3s;
 }
 .services .icon-box p {
@@ -765,14 +765,14 @@ section {
   transform: translateY(-10px);
 }
 .services .icon-box:hover h4 a {
-  color: #47b2e4;
+  color: #629ef7;
 }
 
 /*--------------------------------------------------------------
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(40, 58, 90, 0.9), rgba(40, 58, 90, 0.9)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(29, 50, 87, 0.9), rgba(29, 50, 87, 0.9)), url("../img/cta-bg.jpg") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
@@ -798,8 +798,8 @@ section {
   color: #fff;
 }
 .cta .cta-btn:hover {
-  background: #47b2e4;
-  border: 2px solid #47b2e4;
+  background: #629ef7;
+  border: 2px solid #629ef7;
 }
 @media (max-width: 1024px) {
   .cta {
@@ -835,7 +835,7 @@ section {
   font-family: "Poppins", sans-serif;
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
 }
 .portfolio .portfolio-item {
@@ -879,7 +879,7 @@ section {
   transition: 0.3s;
 }
 .portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #47b2e4;
+  color: #629ef7;
 }
 .portfolio .portfolio-item .portfolio-info .details-link {
   right: 10px;
@@ -909,10 +909,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #47b2e4;
+  border: 1px solid #629ef7;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #47b2e4;
+  background-color: #629ef7;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -974,7 +974,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 20px;
-  color: #37517e;
+  color: #243e6d;
 }
 .team .member span {
   display: block;
@@ -1014,12 +1014,12 @@ section {
   background: #eff2f8;
 }
 .team .member .social a i {
-  color: #37517e;
+  color: #243e6d;
   font-size: 16px;
   margin: 0 2px;
 }
 .team .member .social a:hover {
-  background: #47b2e4;
+  background: #629ef7;
 }
 .team .member .social a:hover i {
   color: #fff;
@@ -1046,11 +1046,11 @@ section {
   font-weight: 500;
   margin-bottom: 15px;
   font-size: 20px;
-  color: #37517e;
+  color: #243e6d;
 }
 .pricing h4 {
   font-size: 48px;
-  color: #37517e;
+  color: #243e6d;
   font-weight: 400;
   font-family: "Jost", sans-serif;
   margin-bottom: 25px;
@@ -1059,7 +1059,7 @@ section {
   font-size: 28px;
 }
 .pricing h4 span {
-  color: #47b2e4;
+  color: #629ef7;
   font-size: 18px;
   display: block;
 }
@@ -1094,23 +1094,23 @@ section {
   display: inline-block;
   padding: 12px 35px;
   border-radius: 50px;
-  color: #47b2e4;
+  color: #629ef7;
   transition: none;
   font-size: 16px;
   font-weight: 500;
   font-family: "Jost", sans-serif;
   transition: 0.3s;
-  border: 1px solid #47b2e4;
+  border: 1px solid #629ef7;
 }
 .pricing .buy-btn:hover {
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
 }
 .pricing .featured {
-  border-top-color: #47b2e4;
+  border-top-color: #629ef7;
 }
 .pricing .featured .buy-btn {
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
 }
 .pricing .featured .buy-btn:hover {
@@ -1170,7 +1170,7 @@ section {
   position: absolute;
   right: 0;
   left: 20px;
-  color: #47b2e4;
+  color: #629ef7;
 }
 .faq .faq-list .icon-show, .faq .faq-list .icon-close {
   font-size: 24px;
@@ -1186,11 +1186,11 @@ section {
   display: none;
 }
 .faq .faq-list a.collapsed {
-  color: #37517e;
+  color: #243e6d;
   transition: 0.3s;
 }
 .faq .faq-list a.collapsed:hover {
-  color: #47b2e4;
+  color: #629ef7;
 }
 .faq .faq-list a.collapsed .icon-show {
   display: inline-block;
@@ -1208,8 +1208,8 @@ section {
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
-  border-top: 3px solid #47b2e4;
-  border-bottom: 3px solid #47b2e4;
+  border-top: 3px solid #629ef7;
+  border-bottom: 3px solid #629ef7;
   padding: 30px;
   background: #fff;
   width: 100%;
@@ -1217,7 +1217,7 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #47b2e4;
+  color: #629ef7;
   float: left;
   width: 44px;
   height: 44px;
@@ -1233,7 +1233,7 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #37517e;
+  color: #243e6d;
 }
 .contact .info p {
   padding: 0 0 10px 60px;
@@ -1262,17 +1262,17 @@ section {
   margin-right: 10px;
 }
 .contact .info .social-links a:hover {
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
 }
 .contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
 }
 .contact .contact-form {
   width: 100%;
-  border-top: 3px solid #47b2e4;
-  border-bottom: 3px solid #47b2e4;
+  border-top: 3px solid #629ef7;
+  border-bottom: 3px solid #629ef7;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
@@ -1337,7 +1337,7 @@ section {
   border-radius: 4px;
 }
 .contact .contact-form input:focus, .contact .contact-form textarea:focus {
-  border-color: #47b2e4;
+  border-color: #629ef7;
 }
 .contact .contact-form input {
   height: 44px;
@@ -1346,7 +1346,7 @@ section {
   padding: 10px 12px;
 }
 .contact .contact-form button[type=button] {
-  background: #47b2e4;
+  background: #629ef7;
   border: 0;
   padding: 12px 34px;
   color: #fff;
@@ -1354,7 +1354,7 @@ section {
   border-radius: 50px;
 }
 .contact .contact-form button[type=button]:hover {
-  background: #209dd8;
+  background: #3b87f7;
 }
 @-webkit-keyframes animate-loading {
   0% {
@@ -1390,7 +1390,7 @@ section {
 .breadcrumbs h2 {
   font-size: 28px;
   font-weight: 600;
-  color: #37517e;
+  color: #243e6d;
 }
 .breadcrumbs ol {
   display: flex;
@@ -1415,7 +1415,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   font-size: 14px;
-  background: #37517e;
+  background: #243e6d;
 }
 #footer .footer-newsletter {
   padding: 50px 0;
@@ -1430,7 +1430,7 @@ section {
   padding: 0;
   line-height: 1;
   font-weight: 600;
-  color: #37517e;
+  color: #243e6d;
 }
 #footer .footer-newsletter form {
   margin-top: 30px;
@@ -1455,14 +1455,14 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #209dd8;
+  background: #3b87f7;
 }
 #footer .footer-top {
   padding: 60px 0 30px 0;
@@ -1478,7 +1478,7 @@ section {
   line-height: 1;
   text-transform: uppercase;
   font-weight: 600;
-  color: #37517e;
+  color: #243e6d;
 }
 #footer .footer-top .footer-contact p {
   font-size: 14px;
@@ -1490,7 +1490,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #37517e;
+  color: #243e6d;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1504,7 +1504,7 @@ section {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #47b2e4;
+  color: #629ef7;
   font-size: 18px;
   line-height: 1;
 }
@@ -1524,12 +1524,12 @@ section {
 }
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #47b2e4;
+  color: #629ef7;
 }
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #47b2e4;
+  background: #629ef7;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1541,7 +1541,7 @@ section {
   transition: 0.3s;
 }
 #footer .footer-top .social-links a:hover {
-  background: #209dd8;
+  background: #3b87f7;
   color: #fff;
   text-decoration: none;
 }
